<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <ImageView
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:src="@drawable/ic_element_money" />
        <EditText
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"

            android:hint="@string/activity_add_amount"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"/>
        <ImageView
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:src="@drawable/ic_element_description"/>
        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:hint="@string/activity_add_description"
            android:imeOptions="actionDone"
            android:inputType="text"/>
    </GridLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="1"
        android:layout_gravity="fill_horizontal" >

        <TextView
            android:layout_column="0"
            android:layout_columnWeight="0"
            android:text="@string/activity_add_cc" />

        <CheckBox
            android:layout_column="1"
            android:checked="true"
            android:layout_columnWeight="1"/>

        <TextView
            android:layout_column="2"
            android:text="@string/activity_add_roomie"
            android:layout_columnWeight="0"/>
        <CheckBox
            android:layout_column="3"
            android:checked="false"
            android:layout_columnWeight="1"/>
    </GridLayout>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/activity_add_button_text"
        android:onClick="addTransaction"/>




</LinearLayout>